added new component Newthree.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
-<h1>Welcome to Angular</h1>
+<!-- <h1>Welcome to Angular</h1>
 <app-newone></app-newone>
-<app-newtwo></app-newtwo>
+<app-newtwo></app-newtwo> -->
